--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,11 +102,29 @@ h2 {
   font-weight: 700;
 }
 
+.bloglisttitle {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.blogtext {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
 .name {
   padding-top: 20px;
   margin: 0;
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 32px;
+}
+
+.subheader {
+  padding-top: 5px;
+  margin: 0;
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 18px;  
 }
 
 .one {
@@ -132,4 +150,14 @@ h2 {
 
 span.highlight {
   background-color: #ffffd0;
+}
+
+img.animated-gif{
+  width: 100%;
+  height: auto;
+}
+
+img.behave{
+  width: 100%;
+  height: auto;
 }
