--- a/stylesheet.css
+++ b/stylesheet.css
@@ -162,16 +162,19 @@ img.behave{
   height: auto;
 }
 
-.syntax {
-  background-color: #213343;
-  border-bottom: 0.25rem solid #ff5c35;
-  border-radius: 0.1875rem;
-  border-top: 0.25rem solid #ff5c35;
-  left: 0;
-  line-height: normal;
-  padding: 0;
-  position: relative;
-  right: 0;
-  white-space: pre;
-  width: 100%;
+pre {
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 0.0rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
 }
